# project12-server

./: .env.dev  .gitignore  Makefile  README.md  compose-dev.yml
app/: Dockerfile.dev  Dockerfile.prod  create_default_yaml_data.py  dev_db_data_sample.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
app/config/: __init__.py  exceptions.py  settings.py  urls.py
app/payments/: __init__.py  admin.py  apps.py  models.py  urls.py  utils.py  views.py
app/payments/migrations/: 0001_initial.py
app/tasks/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
app/tasks/management/commands/: __init__.py  mark_overdue_tasks.py
app/tasks/migrations/: 0001_initial.py  __init__.py
app/users/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
openapi/: main.yaml
